- null safe check - mini fixes - причесан лексер